分离jackson模块